# learn-cg

./: .gitignore  .gitmodules  CMakeLists.txt  LearnCG.sln  README.md
OpenGL/ComputerGraphicsFromScratch/: README.md
OpenGL/ComputerGraphicsFromScratch/BasicRaytracing/: BasicRaytracing.cpp  BasicRaytracing.h  BasicRaytracing.vcxproj  BasicRaytracing.vcxproj.filters  Sphere.h  main.cpp
OpenGL/LearnOpenGL/: Helper.cpp  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  main.cpp  triangle.vert
OpenGL/LearnOpenGL.com/: README.md
OpenGL/LearnOpenGL.com/Element Buffer Objects/: Element Buffer Objects.vcxproj  Element Buffer Objects.vcxproj.filters  ElementBufferObjects.cpp  ElementBufferObjects.h  main.cpp
OpenGL/LearnOpenGL.com/Excercises/Two Color Triangles/: Two Color Triangles.vcxproj  Two Color Triangles.vcxproj.filters  TwoColorTriangles.cpp  TwoColorTriangles.h  black.frag  main.cpp  white.frag
OpenGL/LearnOpenGL.com/Excercises/Two Triangles/: Two Triangles.vcxproj  Two Triangles.vcxproj.filters  TwoTriangles.cpp  TwoTriangles.h  main.cpp
OpenGL/LearnOpenGL.com/Excercises/Two Triangles 2/: Two Triangles 2.vcxproj  Two Triangles 2.vcxproj.filters  TwoTriangles2.cpp  TwoTriangles2.h  main.cpp
OpenGL/LearnOpenGL.com/Hello Triangle/: Hello Triangle.vcxproj  Hello Triangle.vcxproj.filters  HelloTriangle.cpp  HelloTriangle.h  Helper.cpp  Helper.h  main.cpp
OpenGL/LearnOpenGL.com/Tutorials/Element Buffer Objects/: Element Buffer Objects.vcxproj  Element Buffer Objects.vcxproj.filters  ElementBufferObjects.cpp  ElementBufferObjects.h  main.cpp
OpenGL/LearnOpenGL.com/Tutorials/Hello Triangle/: Hello Triangle.vcxproj  Hello Triangle.vcxproj.filters  HelloTriangle.cpp  HelloTriangle.h  main.cpp
OpenGL/LearnOpenGL.com/Tutorials/Textures/: Textures.cpp  Textures.h  Textures.vcxproj  Textures.vcxproj.filters  main.cpp  shader.frag  shader.vert
OpenGL/LearnOpenGL.com/Tutorials/Uniforms/: Uniforms.cpp  Uniforms.h  Uniforms.vcxproj  Uniforms.vcxproj.filters  main.cpp  shader.frag  shader.vert
OpenGL/Shared/: BasicOpenGLSetup.cpp  BasicOpenGLSetup.h  IO.cpp  IO.h  Init.cpp  Init.h  Shader.cpp  Shader.h  Shared.cpp  Shared.h  Shared.vcxproj  Shared.vcxproj.filters  Texture2D.cpp  Texture2D.h  Vec.h
src/: main.cpp
